--- a/template/mobile_index/index.html
+++ b/template/mobile_index/index.html
@@ -42,7 +42,7 @@
 		<div class="clear"></div>
 	</div>
 	<div class="index_gg" id="gundong_html">
-		<div class="gg_tt">公告</div>
+		<div class="gg_tt">Thông Báo</div>
 		<div class="index_gglist gundong_list">
 			<ul>
 				<!--{foreach($notice_list as $v):}-->
